--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- header -->
     <header class="page-header">
-    <div class="container margin-reset">
+    <div class="container margin-reset borderclass">
 <nav class="main-nav">
     <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
 
@@ -76,7 +76,7 @@
        
             <!-- our services -->
         <section class="section">
-           <div class="container">
+           <div class="container ">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="list services">
                     <li class="item"><img src="./images/img.jpg" alt="pc_hands_to_the_left_side_typing" width="370"> </li>
@@ -87,8 +87,8 @@
         </section>
               
         <!-- our team -->
-                <section class="section grey-bgc">
-                   <div class="container team">
+                <section class="section">
+                   <div class="container team grey-bgc">
                     <h2 class="section-title">Наша команда</h2>
                     <ul class="list team-list">
                         <li class="item"><img class="image" src="./images/img(3).jpg" alt="Igor_Demyanenko" width="270">
