--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- header -->
     <header class="page-header">
-    <div class="container margin-reset borderclass">
+    <div class="container margin-reset">
 <nav class="main-nav">
     <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
 
