--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <!-- header -->
     <header class="page-header">
-    <div class="container margin-reset">
-<nav class="main-nav">
+    <div class="container margin-reset main-nav">
+<nav class="nav-align">
     <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
 
     <ul class="site-nav list">
@@ -24,13 +24,14 @@
         <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
         <li class="item"><a class="link" href="">Контакты</a></li>
     </ul>
-<ul class="auth list container-auth">
 
-    <li class="item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-    <li class="item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-</ul>
 
 </nav>
+<ul class="auth list container-auth">
+
+    <li class="item"><a class="email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li class="item"><a class="email" href="tel:+380961111111">+38 096 111 11 11</a></li>
+</ul>
 
 
 
@@ -40,16 +41,18 @@
 
 
         <section class="section section-bgc">
-            <h1 class="hero">Эффективные решения <br> для вашего бизнеса</h1>
-            <div class="button-centered">
-                            <button class="button" type="button">Заказать услугу</button>
-            </div>
+           <div class="container">
+                <h1 class="hero">Эффективные решения для вашего бизнеса</h1>
+                <div class="button-centered">
+                    <button class="button" type="button">Заказать услугу</button>
+                </div>
+           </div>
 
         </section>
         <section class="section">
       <div class="container advantages">
             <!-- header will be hidden -->
-            <h2 class="section-title hide">наши преимущества</h2>
+            <h2 class="section-title visually-hidden">наши преимущества</h2>
             <ul class="list advantages-list">
                 <li class="item">
                     <h3 class="subheader">Внимание к деталям</h3>
@@ -87,25 +90,33 @@
         </section>
               
         <!-- our team -->
-                <section class="section">
-                   <div class="container team grey-bgc">
+                <section class="section grey-bgc">
+                   <div class="container team ">
                     <h2 class="section-title">Наша команда</h2>
                     <ul class="list team-list">
                         <li class="item"><img class="image" src="./images/img(3).jpg" alt="Igor_Demyanenko" width="270">
-                            <h3 class="subheader-team">Игорь Демьяненко</h3>
-                            <p class="text">Product Designer</p>
+                            <div class="padding-desc">
+                                <h3 class="subheader-team">Игорь Демьяненко</h3>
+                                <p class="text">Product Designer</p>
+                            </div>
                         </li>
                         <li class="item"><img class="image" src="./images/img(4).jpg" alt="Blonde girl Olga Repina" width="270">
-                            <h3 class="subheader-team">Ольга Репина</h3>
-                            <p class="text">Frontend Developer</p>
+                          <div class="padding-desc">
+                                <h3 class="subheader-team">Ольга Репина</h3>
+                                <p class="text">Frontend Developer</p>
+                          </div>
                         </li>
                         <li class="item"><img class="image" src="./images/img(5).jpg" alt="Smiling Nikolai Tarasov" width="270">
+                          <div class="padding-desc">
                             <h3 class="subheader-team">Николай Тарасов</h3>
                             <p class="text">Marketing</p>
+                          </div>
                         </li>
                         <li class="item"><img class="image" src="./images/img(6).jpg" alt="Mikhail Ermakov in a black shirt" width="270">
-                            <h3 class="subheader-team">Михаил Ермаков</h3>
-                            <p class="text">UI Designer</p>
+                            <div class="padding-desc">
+                                <h3 class="subheader-team">Михаил Ермаков</h3>
+                                <p class="text">UI Designer</p>
+                            </div>
                         </li>
                     </ul>
 
@@ -119,14 +130,11 @@
             <!-- is it necessary to use 2 separate <address> tags? -->
             <!-- added div for css -->
             <a class="logo-footer" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-            <address>
-                <span class="address-no-italic">
-                    г. Киев, пр-т Леси Украинки, 26
-                </span>
-            
-                <ul class="auth list bgc-grey address-no-italic">
-                    <li><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <address class="address-no-italic"> 
+                г. Киев, пр-т Леси Украинки, 26
+               <ul class="auth list bgc-grey address-no-italic auth-footer">
+                    <li class="item-color"><a class="email-foot" href="mailto:info@example.com">info@example.com</a></li>
+                    <li class="item-color"><a class="email-foot" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
