--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </section>
        
             <!-- our services -->
-        <section class="section">
+        <section class="section no-padding-top">
            <div class="container ">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="list services">
